# Researcher_Agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/vectordb/: knowledge_base.faiss  metadata.pkl
src/Agents/executor/: executor.py  prompts.py
src/Agents/planner/: planner.py  prompts.py
src/Agents/reflector/: prompts.py  reflector.py
src/Agents/replanner/: prompts.py  replanner.py
src/config/: settings.py
src/llm/: openai_client.py
src/orchestration/: research_workflow.py
src/report/: prompts.py  report_generator.py
src/state/: research_state.py
src/tools/RAG/: chunking.py  embeddings.py  ingest.py  retriever.py  vector_store.py
